tests/integration/features/source_code_traceability/_validation/03_relation_marker_has_duplicate_uid_general/test.itest
#
# @relation(SDOC-SRS-33, SDOC-SRS-139, scope=file)
#

RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s
CHECK: error: @relation marker contains duplicate node UIDs: ['REQ-001']. Location: {{.*}}file.py:2.
